<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_to_do">ToDoActivity</string>
	<string name="edittext_todo_title_hint">Enter Title</string>
	<string name="edittext_todo_desc_hint">Enter Description</string>
	<string name="todo_item_title">ToDo</string>
	<string name="todo_item_name">Item</string>
	<string name="todo_item_desc">Description</string>
	
	<string name="menu_new_todo">Add</string>
	<string name="delete_todo">Delete</string>
</resources>
